services/bwdserver-deployment/bwdserver-deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bwd-deployment
  annotations:
    kubernetes.io/change-cause: "{CHANGE_CAUSE}"
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bwdserver-service
  replicas: 36
  template:
    metadata:
      labels:
        app: bwdserver-service
    spec:
      containers:
        - name: bwd-ctr
          image: "gcr.io/balmy-ground-195100/gcp-server:{IMAGE}"
          # Resource limits + requests are intentionally the same, to ensure
          # this pod is a 'Guaranteed' pod, ref:
          #  https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
          resources:
            requests:
              memory: "1000Mi"
              cpu: "125m"
            limits:
              memory: "1000Mi"
              cpu: "125m"
          ports:
            - name: bwd-ctr-port
              containerPort: 80
          lifecycle:
            preStop:
              httpGet:
                # ???? https://github.com/kubernetes/kubernetes/issues/56770
                path: pkill
                port: 80
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            # Giving 2 minutes grace here, there's an outstanding k8s issue
            # preventing you from specifying "start checking liveness after an
            # ok from readiness", which is what you'd expect.
            # https://github.com/kubernetes/kubernetes/issues/27114
            initialDelaySeconds: 120
            periodSeconds: 10 # every 10 seconds
            timeoutSeconds: 10 # time out after 10 seconds
            failureThreshold: 3 # kill container after 3 successive time outs
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          resources:
            requests:
              memory: "500Mi"
              cpu: "125m"
            limits:
              memory: "500Mi"
              cpu: "125m"
          # https://github.com/GoogleCloudPlatform/cloudsql-proxy/issues/128
          command: ["/bin/sh",
                    "-c",
                    "/cloud_sql_proxy -dir=/cloudsql -instances=balmy-ground-195100:us-west1:{CLOUDSQL_INSTANCE_NAME}=tcp:5432 -credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

        #########################
        # Stroller (push proxy) config
        #########################
        - name: stroller
          image: "gcr.io/balmy-ground-195100/stroller:{STROLLER_IMAGE}"
          resources:
            requests:
              memory: "250Mi"
              cpu: "150m"
            limits:
              memory: "250Mi"
              cpu: "150m"
          lifecycle:
            preStop:
              httpGet:
                path: pkill
                port: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            # Giving 2 minutes grace here, there's an outstanding k8s issue
            # preventing you from specifying "start checking liveness after an
            # ok from readiness", which is what you'd expect.
            # https://github.com/kubernetes/kubernetes/issues/27114
            initialDelaySeconds: 120
            periodSeconds: 10 # every 10 seconds
            timeoutSeconds: 10 # time out after 10 seconds
            failureThreshold: 3 # kill container after 3 successive time outs

        - name: http-proxy
          image: nginx:1.16.1
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - name: http-proxy-port
              containerPort: 8000
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: base-nginx-conf
              subPath: base-nginx.conf
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf
          lifecycle:
            preStop:
              exec:
                # https://kubernetes.io/docs/tasks/configure-pod-container/attach-handler-lifecycle-event/
                command: ["/bin/sh", "-c", "nginx -s quit; while killall -0 nginx; do sleep 1; done"]

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: base-nginx-conf
          configMap:
            name: base-nginx
        - name: nginx-conf
          configMap:
            name: nginx
