services/bwdserver-deployment/bwdserver-network-policy.yaml
# Network policy for BwdServer. This prevents access directly to local IPs from Dark
# code, which would be a security problem.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bwdserver-network-policy
spec:
  podSelector:
    matchLabels:
      app: bwdserver-app
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            except:
              # make sure to block link-local addresses,
              # since there's sensitive data in http://metadata
              - 169.254.0.0/16
  ingress:
    - ports:
        - protocol: TCP
          port: 11000
